fixed heading letter spacing on smaller screens

--- a/components/UI/Heading.module.scss
+++ b/components/UI/Heading.module.scss
@@ -20,7 +20,7 @@
     text-align: center;
 
     @include respond(phone) {
-      
+      letter-spacing: 2rem;
       font-size: 5.4rem;
     }
   }
